2005-09-30  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/comboboxentry.py (BaseComboBoxEntry): A 
	reimplementation of GtkComboBoxEntry in python. The main difference
	between this one and the gtk+ one is that we put our own
	entry (a kiwi entry) instead of the standard one, which allows
	us to do put an icon in the right part, used by the validation.
	
	* kiwi/ui/widgets/tooltips.py (Tooltip.__init__): Add a tooltips 
	implementation, which is a bit more flexible than the one in Gtk+. 
	Currently unused.

	* tests/test_argcheck.py (ArgTest.testUserDefined): Add some basic
	tests.

	* kiwi/argcheck.py: Move in decorator from fiscalprinter.
	Add some additional tests and support for checking default values.

2005-09-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: 
	(List): do not save iterator in instance, save the iterators
	in a local table.
	
	* kiwi/ui/widgets/list.py:
	(List.count, List.index, List.extend): Add
	(List.insert, List.pop, List.reverse, List.sort): Add stubs
	(List.append, List.remove, List.update): Rename
	(List.add_instance, List.remove_instance, List.update_instance)
	(List.select_instance): Add backwards compat wrappers
	(List._load): Clean up, add iterator support.
	(List.select): Check selection mode

	* kiwi/utils.py (deprecated): New decorator

	* kiwi/ui/widgets/list.py:
	Remove a couple of methods, now when we have the iter in the instance.
	
2005-09-27  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/widgets/list.py (List.get_previous, List.get_next): New
	methods.
	(List.add_instance, List._load): Set instance.iter upon insertion.
	(Column.__init__): Raise ValueError if iter is used, it's reserved
	(List.select): Rename from select_instance, use iter from
	instance, scroll to cell.	

2005-09-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/accessors.py (CacheControl.invalidate): Use DefaultValue instead of
	AttributeError. Fixes bug #695: Do not eat AttributeError's triggered
	in kgetattr accessors.
