@@ -1,3 +1,7 @@
+2005-10-06  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/list.py (List.refresh): New method.
+
 2005-09-30  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/widgets/comboboxentry.py (BaseComboBoxEntry): A 
